alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ figure {
 
 .waylo-logo {
   font-family: 'Pacifico', cursive;
-  font-size: 28px;
+  font-size: 50px;
   color: #ef6c00 !important;
 }
 
